backward url compatability in templates

--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>{% load static from staticfiles %}{% load mub_tags %}
+<html>{% load static from staticfiles %}{% load mub_tags %}{% load url from future %}
 	<head>
 		<meta charset="utf-8">
 		<meta name="robots" content="noindex, nofollow" />
