--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -113,7 +113,7 @@
 		float:right;
 		background:#070707;
 		margin:-80px 0 0 0;
-		padding:20px;
+		padding:20px 20px 40px 20px;
 		border-radius:30px 30px 0 0;
 		box-shadow:0 0 10px rgba(0,0,0,.5);
 	}
