--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -2,15 +2,25 @@
 <html>{% load static from staticfiles %}{% load mub_tags %}{% load url from future %}
 	<head>
 		<meta charset="utf-8">
-		<meta name="robots" content="noindex, nofollow" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{% block title %}| {{ SITE_NAME }}{% endblock %}</title>
-		<meta name="description" content="">
+		<meta name="description" content="A web comic set in the world of Ultima Online">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		{% add_static "css" %}
 		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="{% static "js/nocache/jquery-1.9.1.min.js" %}"><\/script>')</script>
+		
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41381322-1', 'hateandnut.com');
+  ga('send', 'pageview');
+
+</script>
 		
 		<script src="{% static "js/nocache/modernizr.js" %}"></script>
 	</head>
