--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -11,6 +11,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="{% static "js/nocache/jquery-1.9.1.min.js" %}"><\/script>')</script>
 
+<meta name="google-site-verification" content="epHxHM8Xj-_R-OhTBx9wsUDQiiuGXbQ5NM2AjIb-PVI" />
 <script type="text/javascript">window.google_analytics_uacct = "UA-19357683-2";</script>		
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -124,7 +125,9 @@
 		</div>
 		
 		<footer class="pg-foot-wrap clearfix">
+					
 			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Website by <a href="http://brantsteen.com">Brant Steen</a></p>
+
 		</footer>
 		
 		
