--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -1,16 +1,18 @@
-<!doctype html>
-<html>{% load static from staticfiles %}{% load mub_tags %}{% load url from future %}
+<!doctype html>{% load static from staticfiles %}{% load mub_tags %}{% load url from future %}
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{% block title %}| {{ SITE_NAME }}{% endblock %}</title>
 		<meta name="description" content="A web comic set in the world of Ultima Online">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
 		{% add_static "css" %}
+		
+		{% block extra_head %}{% endblock %}
 		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="{% static "js/nocache/jquery-1.9.1.min.js" %}"><\/script>')</script>
-
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
