--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{% block title %}| {{ SITE_NAME }}{% endblock %}</title>
-		<meta name="description" content="A web comic set in the world of Ultima Online">
+		<meta name="description" content="{% block meta_description %}A web comic set in the world of Ultima Online{% endblock %}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		{% add_static "css" %}
