--- a/assets/themes/hancom/templates/comics/comic_page.html
+++ b/assets/themes/hancom/templates/comics/comic_page.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-
+{% block meta_description %}Hate and NuT webcomic issue #{{ comic.chronology }} - {{ comic.description }}{% endblock %}
 {% block extra_head %}
 	<meta property="og:title" content="Hate and NuT #{{ comic.chronology }}" />
 	<meta property="og:image" content="{{ SITE_URL }}{{ comic.preview_image_half.url }}" /> 
+	<meta property="og:image" content="Hate and NuT webcomic issue #{{ comic.chronology }} - {{ comic.description }}" /> 
 {% endblock %}
 
 {% block title %}{{ comic.title }} {{ block.super }}{% endblock %}
