--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -2,7 +2,7 @@
 
 {% block title %}The Adventures of Hate and NuT{% endblock %}
 
-{% block extra_head %}
+{% block extra_head %}{% load static from staticfiles %}
 	<meta property="og:title" content="The Adventures of Hate and NuT" />
 	<meta property="og:image" content="{{ SITE_URL }}{% static "img/OG_image_home.jpg" %}" /> 
 	<meta property="og:description" content="A web comic set in the world of Ultima Online" /> 
