--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -31,6 +31,16 @@
 	</head>
 	
 	<body><script type="text/javascript">var myViewport = $(window).width(); function writeAd(){document.write("<script type=\"text/javascript\" src=\"http://pagead2.googlesyndication.com/pagead/show_ads.js\"><\/script>");}</script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=495389753807975";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+</script>
+
 		<header class="pg-head-wrap clearfix">
 			<div class="width">
 				<div class="pg-head">
@@ -80,7 +90,6 @@
 
 <script type="text/javascript"><!--
 	if (myViewport >= 1024 && myViewport < 1280){
-		console.log(myViewport);
 		google_ad_client = "ca-pub-8960806131802161";
 		/* HaN: Skyscraper */
 		google_ad_slot = "3418426731";
@@ -129,7 +138,7 @@
 		
 		<footer class="pg-foot-wrap clearfix">
 					
-			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Website by <a href="http://brantsteen.com">Brant Steen</a></p>
+			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Website by <span itemscope itemtype="http://data-vocabulary.org/Person"><a itemprop="url" title="Brant Steen Web Design" href="http://brantsteen.com"><span itemprop="name">Brant Steen</span></a></span></p>
 
 		</footer>
 		
