--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -116,6 +116,8 @@
 		padding:20px 20px 40px 20px;
 		border-radius:30px 30px 0 0;
 		box-shadow:0 0 10px rgba(0,0,0,.5);
+		position:relative;
+		z-index:999;
 	}
 }
 
