--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -87,6 +87,12 @@
 							{% block content %}{% endblock %}
 						</div>
 						<div class="s">
+							<aside class="clearfix">
+								<ul class="social">
+									<li><a title="Subscribe via RSS" class="social-icon social-rss" href="{{ SITE_META.RSS }}"><span class="visuallyhidden">RSS Feed</span></a></li>
+									<li><a title="Follow me on Twitter" class="social-icon social-twitter" href="{{ SITE_META.TWITTER }}"><span class="visuallyhidden">Follow me on Twitter</span></a></li>
+								</ul>
+							</aside>
 
 <script type="text/javascript"><!--
 	if (myViewport >= 1024 && myViewport < 1280){
