--- a/assets/themes/hancom/templates/social/comic_share_buttons.html
+++ b/assets/themes/hancom/templates/social/comic_share_buttons.html
@@ -6,7 +6,8 @@
 		data-url="{{ SITE_URL }}{{ comic.get_absolute_url }}" 
 		data-size="large" 
 		data-related="brantsteen" 
-		data-count="none">Tweet</a>
+		data-count="none"
+		data-hashtags="HateAndNuT" >Tweet</a>
 	</li>
 	
 	<li class="share-plus">
