--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -7,6 +7,9 @@ body{
 	color:#1f1f1f;
 	
 }
+h1, h2, h3, h4{
+	font-family:'dirtyhousemedium';
+}
 h1{
 	margin:.5em 0;
 	font-size:1.6em;
@@ -139,4 +142,8 @@ p{
 .footer-text a:active,
 .footer-text a:visited{
 	color:#d7d7d7;
+}
+
+.bordered-image{
+	border:solid 5px #272727;	
 }
