--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -30,7 +30,7 @@
 		<script src="{% static "js/nocache/modernizr.js" %}"></script>
 	</head>
 	
-	<body><script type="text/javascript">var myViewport = $(window).width(); function writeAd(){document.write("<script type=\"text/javascript\" src=\"http://pagead2.googlesyndication.com/pagead/show_ads.js\"><\/script>");}</script>
+	<body class="{% block body_class %}{% endblock %}"><script type="text/javascript">var myViewport = $(window).width(); function writeAd(){document.write("<script type=\"text/javascript\" src=\"http://pagead2.googlesyndication.com/pagead/show_ads.js\"><\/script>");}</script>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
