--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}The Adventures of Hate and NuT{% endblock %}
+{% block title %}The Adventures of Hate and NuT | Latest Webcomic{% endblock %}
 
 {% block extra_head %}{% load static from staticfiles %}
 	<meta property="og:title" content="The Adventures of Hate and NuT" />
 	<meta property="og:image" content="{{ SITE_URL }}{% static "img/OG_image_home.jpg" %}" /> 
-	<meta property="og:description" content="A web comic set in the world of Ultima Online" /> 
+	<meta property="og:description" content="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." /> 
 {% endblock %}
 
 {% block content %}
