A few minor template updates… metadata, primarily

--- a/assets/themes/hancom/templates/404.html
+++ b/assets/themes/hancom/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Page Not Found | 404 {{ block.super }}{% endblock %}
 {% block content %}
 	<h1>404</h1>
 	<p>Page not found.</p>
