--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -75,7 +75,7 @@
 	}
 </script>
 					
-					<a href="{% url "home" %}"><img class="logo" src="{% static "img/adv_hateandnut.png" %}" alt="Hate and Nut Logo" /></a>
+					<a href="{% url "home" %}"><img class="logo" title="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." src="{% static "img/adv_hateandnut.png" %}" alt="Hate and Nut Logo" /></a>
 				</div>
 			</div>
 		</header>
@@ -145,7 +145,7 @@
 		
 		<footer class="pg-foot-wrap clearfix">
 					
-			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Website by <span itemscope itemtype="http://data-vocabulary.org/Person"><a itemprop="url" title="Brant Steen Web Design" href="http://brantsteen.com"><span itemprop="name">Brant Steen</span></a></span></p>
+			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Webcomic by <span itemscope itemtype="http://data-vocabulary.org/Person"><a itemprop="url" title="Brant Steen Web Design" href="http://brantsteen.com"><span itemprop="name">Brant Steen</span></a></span></p>
 			<ul class="social">
 				<li><a title="Subscribe via RSS" class="social-icon social-rss" href="{{ SITE_META.RSS }}"><span class="visuallyhidden">RSS Feed</span></a></li>
 				<li><a title="Follow me on Twitter" class="social-icon social-twitter" href="{{ SITE_META.TWITTER }}"><span class="visuallyhidden">Follow me on Twitter</span></a></li>
