--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -12,7 +12,8 @@ h1, h2, h3, h4{
 }
 h1{
 	margin:.5em 0;
-	font-size:1.6em;
+	font-size:1.3em;
+	font-weight:normal;
 }
 .heading-wrap{
 	margin:.5em 0;
@@ -109,7 +110,7 @@ p{
 .comic-nav-list-item{
 	float:right;
 	margin:0;
-	font-size:1.6em;
+	font-size:1.4em;
 	color:#b7b7b7;
 }
 .comic-nav-list-item-left{
