--- a/assets/themes/hancom/templates/404.html
+++ b/assets/themes/hancom/templates/404.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
+
+{% load static from staticfiles %}
+
 {% block title %}Page Not Found | 404 {{ block.super }}{% endblock %}
-{% block content %}
-	<h1>404</h1>
-	<p>Page not found.</p>
+
+{% block body_class %}pg-404{% endblock %}
+
+{% block content_plus_ads %}
+	<h1 class="heading-404">404 - Page Not Found</h1>
+
+	<img class="image-404" src="{% static "img/fingers.png" %}" />
+
 {% endblock %}
