--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{% block title %}| {{ SITE_NAME }}{% endblock %}</title>
-<script type="text/javascript">window.google_analytics_uacct = "UA-19357683-2";</script>		
-		<meta name="description" content="{% block meta_description %}A webcomic about a couple of rutheless killers, set in the world of Ultima Online.{% endblock %}">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="apple-mobile-web-app-title" content="Hate and NuT">
+		<script type="text/javascript">window.google_analytics_uacct = "UA-19357683-2";</script>		
+		<meta name="description" content="{% block meta_description %}A webcomic about a couple of rutheless killers, set in the world of Ultima Online.{% endblock %}" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="apple-mobile-web-app-title" content="Hate and NuT" />
 		<link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png" />
-		
+
 		{% add_static "css" %}
 		
 		{% block extra_head %}{% endblock %}
