--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -31,7 +31,10 @@
 		<script src="{% static "js/nocache/modernizr.js" %}"></script>
 	</head>
 	
-	<body class="{% block body_class %}{% endblock %}"><script type="text/javascript">var myViewport = $(window).width(); function writeAd(){document.write("<script type=\"text/javascript\" src=\"http://pagead2.googlesyndication.com/pagead/show_ads.js\"><\/script>");}</script>
+	<body class="{% block body_class %}{% endblock %}">
+
+<script type="text/javascript">var myViewport = $(window).width();</script>
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -49,30 +52,11 @@
 
 <script type="text/javascript"><!--
 	if (myViewport > 748){
-		google_ad_client = "ca-pub-8960806131802161";
-		/* HaN: Header Banner */
-		google_ad_slot = "9464960332";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		document.write('<aside class="banner-ad header-ad">');
-		writeAd();
-		document.write('<\/aside>');
+		document.write('<aside class="banner-ad header-ad sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="leaderboard" %}"><\/aside>');
 	}
-</script>
-
-<script type="text/javascript"><!--
-	if (myViewport < 748){
-		google_ad_client = "ca-pub-8960806131802161";
-		/* HaN: Smallest: Mobile Banner */
-		google_ad_slot = "1941693537";
-		google_ad_width = 320;
-		google_ad_height = 50;
-		//-->
-		document.write('<aside class="mobile-fixed-ad-wrap"><div class="mobile-fixed-ad">');
-		writeAd();
-		document.write('<\/div><\/aside>');
-	}
+	else if (myViewport < 748){
+		document.write('<aside class="mobile-fixed-ad-wrap"><div class="mobile-fixed-ad sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="mobile-leaderboard" %}"><\/div><\/aside>');
+	}//-->
 </script>
 					
 					<a href="{% url "home" %}"><img class="logo" title="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." src="{% static "img/adv_hateandnut.png" %}" alt="Hate and Nut Logo" /></a>
@@ -96,47 +80,10 @@
 							</aside>
 
 <script type="text/javascript"><!--
-	if (myViewport >= 1024 && myViewport < 1280){
-		google_ad_client = "ca-pub-8960806131802161";
-		/* HaN: Skyscraper */
-		google_ad_slot = "3418426731";
-		google_ad_width = 160;
-		google_ad_height = 600;
-		//-->
-		document.write('<aside class="side-banner-medium">');
-		writeAd();
-		document.write('<\/aside>');
-	}
-</script>							
-
-<script type="text/javascript"><!--
-	if (myViewport >= 1280){
-		google_ad_client = "ca-pub-8960806131802161";
-		/* HaN: Largest: Square */
-		google_ad_slot = "6511493936";
-		google_ad_width = 300;
-		google_ad_height = 250;
-		//-->
-		document.write('<aside class="side-rectangle-ad">');
-		writeAd();
-		document.write('<\/aside>');
-	}
+	if (myViewport >= 1024){
+		document.write('<aside class="side-banner-medium sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="wide-skyscraper" %}"><\/aside>');
+	}//-->
 </script>
-
-<script type="text/javascript"><!--
-	if (myViewport >= 1280){
-		google_ad_client = "ca-pub-8960806131802161";
-		/* HaN: Largest: Big Side Banner */
-		google_ad_slot = "7988227137";
-		google_ad_width = 300;
-		google_ad_height = 600;
-		//-->
-		document.write('<aside class="side-rectangle-ad">');
-		writeAd();
-		document.write('<\/aside>');			
-	}
-</script>
-
 						</div>
 					{% endblock %}
 				</div>
