--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -1,15 +1,13 @@
 @media all and (min-width:748px){
 	body{
 		padding:0;
-		
 	}
 	.content{
 		background:#fefefe;
-		padding:10px 20px 0;
+		padding:10px 20px;
 		border-radius:20px;
 		border:8px solid #531112;
 	}
-	
 	h1{
 		font-size:1.8em;
 		margin:.8em 0;
@@ -61,7 +59,7 @@
 		border-top:solid 1px #a02123;
 	}
 	.pg-foot-wrap{
-		padding:55px 10px 10px;
+		padding:55px 25px 10px;
 	}
 	.heading-404{
 		background:#fefefe;
@@ -70,10 +68,37 @@
 		border:8px solid #531112;
 		margin:0;
 	}
-	
+	.pg-head-nav .button-elaborate{
+		display:inline;
+	}
+	.button{
+		border:solid 5px;
+	}
+	.foot-section{
+		float:left;
+		width:33%;
+		text-align:center;
+		padding:0;
+	}
+	.donate-button{
+		font-size:1.3em;
+	}
 }
 
 @media all and (min-width:1024px){
+	.foot-section{
+		text-align:left;
+	}
+	.two-col-right{
+		float:right;
+		width:48%;
+		padding:1%;
+	}
+	.two-col-left{
+		float:left;
+		width:48%;
+		padding:1%;
+	}
 	.pg-head-wrap{
 		padding:5px 0 60px 0;
 	}
@@ -90,6 +115,7 @@
 		margin:1em 0;
 		font-size:2em;
 	}
+	hgroup,
 	.heading-wrap{
 		margin:1em 0;
 	}
@@ -106,35 +132,27 @@
 	}
 	.content{
 		margin:-65px 0 0;
-		max-width:76%;
+		max-width:72%;
 		float:left;
 	}
 	.non-comic .content{
-		max-width:none;
 		float:none;
+		max-width:none;	
 	}
 	.s{
 		float:right;
 		display:block;
+		width:20%;
+		text-align:center;
+		margin:-40px 0 0;
+	}
+	.pg-head-nav{
+		display:none;
 	}
 	.side-banner-medium{
 		display:block;
-		margin:2em 0 0;
-	}
-	.pg-foot-wrap{
-		padding:32px 10px;
-		box-shadow:0 0 10px rgba(0,0,0,.5);
-	}
-	.footer-text{
-		float:right;
-		background:#070707;
-		margin:-80px 0 0 0;
-		padding:20px 20px 40px 20px;
-		border-radius:30px 30px 0 0;
-		box-shadow:0 0 10px rgba(0,0,0,.5);
-		position:relative;
-		z-index:999;
-		text-align:center;
+		margin:2em auto 0;
+		width:160px;
 	}
 }
 
@@ -142,18 +160,12 @@
 	.width{
 		max-width:1400px;
 	}
-	.content{
-		max-width:70%;
-	}
-	.footer-text{
-		padding:15px 50px 15px;
-		border-radius:25px 25px 0 0;
-		margin:-80px 20px 0 0;
+	.button{
+		padding:.6em 1.2em;
 	}
 }
 
 @media all and (min-width:1420px){
-	
 	.width{
 		max-width:1500px;
 	}
