--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -48,7 +48,6 @@
 		<header class="pg-head-wrap clearfix">
 			<div class="width">
 				<div class="pg-head">
-					
 
 <script type="text/javascript"><!--
 	if (myViewport >= 748){
@@ -58,7 +57,14 @@
 		document.write('<aside class="mobile-fixed-ad-wrap"><div class="mobile-fixed-ad sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="mobile-leaderboard" %}"><\/div><\/aside>');
 	}//-->
 </script>
-					
+					<nav class="pg-head-nav">
+						<ul class="pg-head-nav-list">
+							<li class="pg-head-nav-item">
+								<a class="pg-head-nav-link button donate-button side-donate-button" href="{% url "donate" %}">Donate<br/><span class="button-elaborate">Support Hate and NuT</span></a>
+							</li>
+						</ul>
+					</nav>
+
 					<a href="{% url "home" %}"><img class="logo" title="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." src="{% static "img/adv_hateandnut.png" %}" alt="Hate and Nut Logo" /></a>
 				</div>
 			</div>
@@ -72,18 +78,20 @@
 							{% block content %}{% endblock %}
 						</article>
 						<div class="s">
-							<aside class="clearfix">
-								<ul class="social">
-									<li><a title="Subscribe via RSS" class="social-icon social-rss" href="{{ SITE_META.RSS }}"><span class="visuallyhidden">RSS Feed</span></a></li>
-									<li><a title="Follow me on Twitter" class="social-icon social-twitter" href="{{ SITE_META.TWITTER }}"><span class="visuallyhidden">Follow me on Twitter</span></a></li>
-								</ul>
-							</aside>
+							
+							<a class="button donate-button side-donate-button" href="{% url "donate" %}">Donate<br/><span class="button-elaborate">Support Hate and NuT</span></a>
 
 <script type="text/javascript"><!--
 	if (myViewport >= 1024){
 		document.write('<aside class="side-banner-medium sponsorship-ad-wrapper" data-sponsorship="{% url "sponsorship_ad_by_type" type_slug="wide-skyscraper" %}"><\/aside>');
 	}//-->
 </script>
+							<aside class="clearfix">
+								<ul class="social">
+									<li><a title="Subscribe via RSS" class="social-icon social-rss" href="{{ SITE_META.RSS }}"><span class="visuallyhidden">RSS Feed</span></a></li>
+									<li><a title="Follow me on Twitter" class="social-icon social-twitter" href="{{ SITE_META.TWITTER }}"><span class="visuallyhidden">Follow me on Twitter</span></a></li>
+								</ul>
+							</aside>	
 						</div>
 					{% endblock %}
 				</div>
@@ -91,16 +99,45 @@
 		</div>
 		
 		<footer class="pg-foot-wrap clearfix">
+			
+			<div class="clearfix">
+				{% block footer_content %}
+				<nav class="foot-section">
+						<h2><span class="underlined-heading">Support the Comic</span></h2>
+						<ul>
+							<li><a href="#">Advertise</a></li>
+							<li><a href="{% url "donate" %}">Donate</a></li>
+							<li><a href="#">Sponsor</a></li>
+						</ul>
+					</nav>
+					<nav class="foot-section">
+						<h2><span class="underlined-heading">Hate and NuT</span></h2>
+						<ul>
+							<li><a href="#">Characters</a></li>
+							<li><a href="{% url "donate" %}">Archive</a></li>
+						</ul>
+					</nav>
 					
-			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Webcomic by <span itemscope itemtype="http://data-vocabulary.org/Person"><a itemprop="url" title="Brant Steen Web Design" href="http://brantsteen.com"><span itemprop="name">Brant Steen</span></a></span></p>
+					<nav class="foot-section">
+						<h2><span class="underlined-heading">Follow Along</span></h2>
+						<ul>
+							<li><a href="{{ SITE_META.RSS }}">Subscribe via RSS</a></li>
+							<li><a href="{{ SITE_META.TWITTER }}">Twitter</a></li>
+						</ul>
+					</nav>
+				{% endblock %}
+				
+			</div>
 			<ul class="social">
 				<li><a title="Subscribe via RSS" class="social-icon social-rss" href="{{ SITE_META.RSS }}"><span class="visuallyhidden">RSS Feed</span></a></li>
 				<li><a title="Follow me on Twitter" class="social-icon social-twitter" href="{{ SITE_META.TWITTER }}"><span class="visuallyhidden">Follow me on Twitter</span></a></li>
 			</ul>
+			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Webcomic by <span itemscope itemtype="http://data-vocabulary.org/Person"><a itemprop="url" title="Brant Steen Web Design" href="http://brantsteen.com"><span itemprop="name">Brant Steen</span></a></span></p>
+			
+			
 		</footer>
 		
-		
 		{% add_static "js" %}
+		
     </body>
-    
 </html>
