--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -105,7 +105,7 @@
 				<nav class="foot-section">
 						<h2><span class="underlined-heading">Support the Comic</span></h2>
 						<ul>
-							<li><a href="#">Advertise</a></li>
+							<li><a href="{% url "become_an_advertiser" %}">Advertise</a></li>
 							<li><a href="{% url "donate" %}">Donate</a></li>
 							<li><a href="#">Sponsor</a></li>
 						</ul>
@@ -114,7 +114,7 @@
 						<h2><span class="underlined-heading">Hate and NuT</span></h2>
 						<ul>
 							<li><a href="#">Characters</a></li>
-							<li><a href="{% url "donate" %}">Archive</a></li>
+							<li><a href="{% url "archive_index" %}">Archive</a></li>
 						</ul>
 					</nav>
 					
