Sponsorship/advertise forms

--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -107,7 +107,7 @@
 						<ul>
 							<li><a href="{% url "become_an_advertiser" %}">Advertise</a></li>
 							<li><a href="{% url "donate" %}">Donate</a></li>
-							<li><a href="#">Sponsor</a></li>
+							<li><a href="{% url "become_a_sponsor" %}">Sponsor</a></li>
 						</ul>
 					</nav>
 					<nav class="foot-section">
