--- a/assets/themes/hancom/templates/website/advertise.html
+++ b/assets/themes/hancom/templates/website/advertise.html
@@ -2,3 +2,7 @@
 
 {% block title %}Advertise {{ block.super }}{% endblock %}
 
+{% block right_column %}
+	<h1>Interested in Advertising on Hate and NuT?</h1>
+	<div data-form="{% url "sponsorship_advertise_form" %}"></div>
+{% endblock %}
