Meta description change

--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{% block title %}| {{ SITE_NAME }}{% endblock %}</title>
 		<script type="text/javascript">window.google_analytics_uacct = "UA-19357683-2";</script>		
-		<meta name="description" content="{% block meta_description %}A webcomic about the adventures of couple of ruthless killers, set in the fantasy world of Ultima Online's Britannia.{% endblock %}" />
+		<meta name="description" content="{% block meta_description %}A webcomic about the adventures of couple of ruthless killers - Hate and NuT - along with a colorful cast of other characters, set in a dangerous fantasy world.{% endblock %}" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="apple-mobile-web-app-title" content="Hate and NuT" />
 		<link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png" />
