--- a/assets/themes/hancom/templates/website/donate.html
+++ b/assets/themes/hancom/templates/website/donate.html
@@ -9,15 +9,18 @@
 		<h1>Enjoying the comic?</h1>
 		<h2>Contributions are much appreciated.</h2>
 	</hgroup>
-	<p>I love making this webcomic and I want to keep it up.</p>
-	<p>Your donations help make it happen!</p>
+	
 	<form>
 		<p><label>$</label> <input value="2.00" type="text" /><input type="submit" value="Donate" /></p>
 	</form>
+	
+	<p>I love making this webcomic and I want to keep it up.</p>
+	<p>Your donations help make it happen!</p>
 {% endblock %}
 
 {% block left_column %}
-	<img src="{% static "img/hate-yell.jpg" %}" />
+	<p><img src="{% static "img/inks.png" %}" alt="Inked Hate and NuT Comics" /></p>
+	<p>As a <em>thank you</em> for your donation, I'll send you a sneak peak at one of the inked comics from that month.</p>
 {% endblock %}
 
 {% block footer_content %}{% endblock %}
