--- a/assets/themes/hancom/templates/website/donate.html
+++ b/assets/themes/hancom/templates/website/donate.html
@@ -20,7 +20,5 @@
 
 {% block left_column %}
 	<p><img src="{% static "img/inks.png" %}" alt="Inked Hate and NuT Comics" /></p>
-	<p>As a <em>thank you</em> for your donation, I'll send you a sneak peak at one of the inked comics from that month.</p>
+	<p>As a <em>thank you</em>, I'll send you a sneak peak at one of the inked comics from the month of your donation!</p>
 {% endblock %}
-
-{% block footer_content %}{% endblock %}
