--- a/assets/themes/hancom/static/css/forms.css
+++ b/assets/themes/hancom/static/css/forms.css
@@ -5,7 +5,6 @@ form textarea{
 label{
 	display:block;
 	font-size:.9em;
-	margin-left:15px;
 }
 input[type=text],
 input[type=email],
@@ -36,7 +35,7 @@ textarea{
 	
 	display:block;
 	font-size:.7em;
-	margin:5px 0 5px 15px;
+	margin:5px 0;
 	color:#777;
 	
 }
