--- a/assets/themes/hancom/templates/sponsorship/ad.html
+++ b/assets/themes/hancom/templates/sponsorship/ad.html
@@ -7,5 +7,5 @@ style="
 	height:{{ ad.type.height }}px" 
 class="sponsorship-ad" 
 data-sponsorship-ad-link="{{ ad.link }}"
-data-sponsorship-ad-code="{{ campaign.slug}}-{{ ad.slug }}"
+data-sponsorship-ad-code="{{ ad.campaign.slug }} - {{ ad.slug }}"
 ></ins>
