--- a/assets/themes/hancom/templates/website/advertise.html
+++ b/assets/themes/hancom/templates/website/advertise.html
@@ -1,5 +1,7 @@
 {% extends "layouts/two_column.html" %}
 
+{% load url from future %}
+
 {% load static from staticfiles %}
 
 {% block title %}Advertise {{ block.super }}{% endblock %}
