While we get donations into place...

--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -148,7 +148,7 @@
 		display:block;
 		width:20%;
 		text-align:center;
-		margin:-40px 0 0;
+		/*margin:-40px 0 0;*/
 	}
 	.pg-head-nav{
 		display:none;
